# ba-native

./: .gitignore  CMakeLists.txt  Timer.cpp  Timer.h  build.sh  cuda.cu  cuda.cuh  main.cpp  test.cpp  test.sh
include/: array.h  vec3.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
